# c-final-exam

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
lib/: CMakeLists.txt  bool.h  calc.c  calc.h  customer.c  customer.h  datetime.c  datetime.h  error.c  error.h  io.c  io.h  macro.h  misc.c  misc.h  room.c  room.h
src/: CMakeLists.txt  main.c
