cmake_minimum_required(VERSION 3.8)

set(PROJECT_NAME c-final-exam)
set(PROJECT_VERSION "1.0.0")
set(PROJECT_DESC "Final exam project for C Programming Language")
set(PROJECT_URL "https://github.com/HDU421/c-final-exam")
set(PROJECT_ISSUES_URL "https://github.com/HDU421/c-final-exam/issues")
project(${PROJECT_NAME})

add_subdirectory(src)
